[Edit]: Get filter and Route permissions
