# controller/userController/user.go
@@ -192,7 +192,6 @@ func GetDeletedUsers(ctx echo.Context) error {
 // @Description Update User from the database
 // @Accept json
 // @Produce json
-// @Param id path string true "Id User"
 // @Param Request body users.UserUpdate true "Update User"
 // @Security ApiKeyAuth
 // @SecurityDefinitions ApiKeyAuth
@@ -242,6 +241,62 @@ func UpdateById(ctx echo.Context) error {
 	return ctx.JSON(200, map[string]interface{}{"message": "Update user successfully"})
 }
 
+// @Tags User
+// @Summary Admin Update User
+// @Description Update User from the database
+// @Accept json
+// @Produce json
+// @Param id path string true "Id User"
+// @Param Request body users.UserUpdate true "Update User"
+// @Security ApiKeyAuth
+// @SecurityDefinitions ApiKeyAuth
+// @response 200 {object} helper.SuccessResponse "Success response"
+// @Router /users/:id [put]
+func AdminUpdateById(ctx echo.Context) error {
+	userModelHelper := users.DatabaseRequest{DB: database.DBMYSQL}
+
+	user_id := ctx.QueryParam("id")
+	claim := ctx.Get("user").(*jwt.Token)
+	userClaim := claim.Claims.(*auth.Claims)
+	id := userClaim.UserID
+
+	userReq := users.UserUpdate{}
+	if err := ctx.Bind(&userReq); err != nil {
+		return ctx.JSON(500, utils.ResponseMessage{
+			Status:  500,
+			Message: "Invalid request body",
+			Result:  err.Error(),
+		})
+	}
+	if reflect.ValueOf(userReq).IsZero() {
+		return ctx.JSON(500, utils.ResponseMessage{
+			Status:  500,
+			Message: "Invalid request body",
+			Result:  "No value from request body",
+		})
+	}
+
+	// err = ctx.Validate(&userReq)
+	// if err != nil {
+	// 	return ctx.JSON(400, map[string]interface{}{"message": "Invalid Validate User Request " + err.Error()})
+	// }
+
+	user := users.Users{
+		Firstname: userReq.Firstname,
+		Lastname:  userReq.Lastname,
+		Email:     userReq.Email,
+		Password:  userReq.Password,
+		Address:   userReq.Address,
+		UpdatedAt: now,
+	}
+
+	if result := userModelHelper.UpdateUser(user_id, id, &user); result != nil {
+		return ctx.JSON(500, map[string]interface{}{"message": "Update user error"})
+	}
+
+	return ctx.JSON(200, map[string]interface{}{"message": "Update user successfully"})
+}
+
 // @Tags Admin
 // @Summary Admin Update User
 // @Description Admin Update User
@@ -255,6 +310,10 @@ func UpdateById(ctx echo.Context) error {
 func AdminUpdateUsers(ctx echo.Context) error {
 	userModelHelper := users.DatabaseRequest{DB: database.DBMYSQL}
 
+	claim := ctx.Get("user").(*jwt.Token)
+	userClaim := claim.Claims.(*auth.Claims)
+	updater := userClaim.UserID
+
 	data := []*users.AdminUserMultiUpdate{}
 	err := ctx.Bind(&data)
 	if err != nil {
@@ -267,7 +326,7 @@ func AdminUpdateUsers(ctx echo.Context) error {
 			Result:  data,
 		})
 	}
-	if result := userModelHelper.UpdateUserArray(data); result != nil {
+	if result := userModelHelper.UpdateUserArray(data, updater); result != nil {
 		return ctx.JSON(500, utils.ResponseMessage{
 			Status:  500,
 			Message: "Update user error",
