# docs/swagger.json
@@ -402,50 +402,6 @@
                 }
             }
         },
-        "/back-office/admin/orders/fil": {
-            "get": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
-                "description": "SuperAdmin Get Order Filter",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Order"
-                ],
-                "summary": "SuperAdmin Get Order Filter",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "limit",
-                        "name": "limit",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "page",
-                        "name": "page",
-                        "in": "query",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Success response",
-                        "schema": {
-                            "$ref": "#/definitions/helper.SuccessResponse"
-                        }
-                    }
-                }
-            }
-        },
         "/categorys": {
             "get": {
                 "security": [
@@ -1010,7 +966,7 @@
                 "tags": [
                     "User"
                 ],
-                "summary": "Update User",
+                "summary": "Admin Update User",
                 "parameters": [
                     {
                         "type": "string",
